# personalized-chatbot

./: .gitignore  pyproject.toml  requirements.txt
agentic_ai_basic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: app.py  main.py  main2.py  tools.py
src/me/: summary.txt
